# BowlingGame

backend/: pyproject.toml
backend/backend/: main.py  schemas.py  services.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.css
frontend/src/components/: Frame.css  Frame.js  Game.js  ScoreBoard.css  ScoreBoard.js
frontend/src/redux/: gameSlice.js
